[PAVAN]ADD: Forgot Password Feature Along With Node Mailer
